--- a/reading_data.Rmd
+++ b/reading_data.Rmd
@@ -33,9 +33,8 @@ scale_fill_discrete = scale_fill_viridis_d
 read in the html
 ```{r}
 url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
-drug_use_html = read_html(url)
 
-drug_use_html
+drug_use_html = read_html(url)
 ```
 extract tibble; focus on the first one
 ```{r}
@@ -51,7 +50,37 @@ table_marj
 ```
 
 
+## Star Wars movie info
 
+(https://www.imdb.com/list/ls070150896/)
+```{r}
+url = "https://www.imdb.com/list/ls070150896/"
+
+swm_html = read_html(url)
+```
+
+```{r}
+title_vec = 
+  swm_html %>%
+  html_nodes(css = ".lister-item-header a") %>% 
+  html_text()
+
+gross_rev_vec = 
+  swm_html %>%
+  html_nodes(".text-small:nth-child(7) span:nth-child(5)") %>%
+  html_text()
+
+runtime_vec = 
+  swm_html %>%
+  html_nodes(".runtime") %>%
+  html_text()
+
+swm_df = 
+  tibble(
+    title = title_vec,
+    rev = gross_rev_vec,
+    runtime = runtime_vec)
+```
 
 
 
