--- a/reading_data.Rmd
+++ b/reading_data.Rmd
@@ -82,6 +82,22 @@ swm_df =
     runtime = runtime_vec)
 ```
 
+## Get some water data
+
+This is from an API
+
+```{r}
+nyc_water = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.csv") %>% 
+  content("parsed")
+
+nyc_water = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.json") %>% 
+  content("text") %>%
+  jsonlite::fromJSON() %>%
+  as_tibble()
+```
+
 
 
 
