--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -148,3 +148,29 @@ data_marj =
   filter(!(State %in% c("Total U.S.", "Northeast", "Midwest", "South", "West")))
 ```
 
+## NSDHU Factors
+```{r}
+data_marj %>%
+  filter(age == "12-17") %>% 
+  mutate(State = fct_reorder(State, percent)) %>% 
+  ggplot(aes(x = State, y = percent, color = year)) + 
+    geom_point() + 
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+
+```{r}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
